test crete-problem interface
