# docs/swagger.yaml
@@ -1,6 +1,33 @@
+definitions:
+  models.ProblemBasic:
+    type: object
 info:
   contact: {}
 paths:
+  /admin/problem-create:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: authorization
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: ProblemBasic
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/models.ProblemBasic'
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 问题创建
+      tags:
+      - 管理员私有方法
   /login:
     post:
       parameters:
