# middlewares/auth_admin.go
@@ -1,0 +1,32 @@
+package middlewares
+
+import (
+	"YourProjectName/helper"
+	"github.com/gin-gonic/gin"
+	"net/http"
+)
+
+// AuthAdminCheck is a middleware function that checks if the user is authenticated with admin role.
+func AuthAdminCheck() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		auth := c.GetHeader("Authorization")
+		userClaim, err := helper.AnalyseToken(auth)
+		if err != nil {
+			c.Abort()
+			c.JSON(http.StatusOK, gin.H{
+				"code": http.StatusUnauthorized,
+				"msg":  "当前未登录",
+			})
+			return
+		}
+		if userClaim == nil || userClaim.IsAdmin != 1 {
+			c.Abort()
+			c.JSON(http.StatusOK, gin.H{
+				"code": http.StatusUnauthorized,
+				"msg":  "未经授权",
+			})
+			return
+		}
+		c.Next()
+	}
+}
