# middlewares/auth_user.go
@@ -1,0 +1,32 @@
+package middlewares
+
+import (
+	"YourProjectName/helper"
+	"github.com/gin-gonic/gin"
+	"net/http"
+)
+
+func AuthUserCheck() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		auth := c.GetHeader("Authorization")
+		userClaim, err := helper.AnalyseToken(auth)
+		if err != nil {
+			c.Abort()
+			c.JSON(http.StatusOK, gin.H{
+				"code": http.StatusUnauthorized,
+				"msg":  "当前未登录",
+			})
+			return
+		}
+		if userClaim == nil {
+			c.Abort()
+			c.JSON(http.StatusOK, gin.H{
+				"code": http.StatusUnauthorized,
+				"msg":  "未经授权",
+			})
+			return
+		}
+		c.Set("user_claims", userClaim)
+		c.Next()
+	}
+}
